RESOLVED FIXED 259166
REGRESSION: source code viewer on Github renders two overlapping carets
https://bugs.webkit.org/show_bug.cgi?id=259166
Summary REGRESSION: source code viewer on Github renders two overlapping carets
Richard Robinson
Reported 2023-07-12 16:22:57 PDT
Attachments
Richard Robinson
Comment 1 2023-07-12 16:26:48 PDT
EWS
Comment 2 2023-07-14 13:20:59 PDT
Committed 266070@main (4cc63dfc70a9): <https://commits.webkit.org/266070@main> Reviewed commits have been landed. Closing PR #15800 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.