REGRESSION: source code viewer on Github renders two overlapping carets https://bugs.webkit.org/show_bug.cgi?id=259166 rdar://112056259

Reviewed by Aditya Keerthi.

The color of the caret should respect both the `caret-color` and the `color` properties.
Because every element implicitly has a `color`, the color of the caret should only reflect
this property if set by the author.

* LayoutTests/fast/css/caret-color-with-color-property-expected.html: Added.
* LayoutTests/fast/css/caret-color-with-color-property.html: Added.
* LayoutTests/fast/css/caret-color-with-inherited-color-property-expected.html: Added.
* LayoutTests/fast/css/caret-color-with-inherited-color-property.html: Added.
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/editing/FrameSelection.cpp:
(WebCore::CaretBase::computeCaretColor):
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::RenderStyle::hasExplicitlySetColor const):
(WebCore::RenderStyle::InheritedFlags::operator== const):
* Source/WebCore/rendering/style/RenderStyleSetters.h:
(WebCore::RenderStyle::setHasExplicitlySetColor):
* Source/WebCore/style/StyleBuilderCustom.h:
(WebCore::Style::BuilderCustom::applyValueColor):
(WebCore::Style::BuilderCustom::applyInitialColor):
* Source/WebCore/style/StyleBuilderState.h:
(WebCore::Style::BuilderState::isAuthorOrigin const):

Canonical link: https://commits.webkit.org/266070@main